add user and password for db config

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,8 @@ go.work
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -133,5 +134,9 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Config files
+.env
+config.yml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,go,vim,git
